--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <script>
     function notifyMe() {
+        Notification.permission = 'granted';
         if(Notification.permission == 'denied'){
                  Notification.requestPermission(function (status){
                         console.log("Reaching here");
