--- a/index.html
+++ b/index.html
@@ -18,17 +18,7 @@
 
 <script>
  
- if ('serviceWorker' in navigator) {
-   navigator.serviceWorker
-     .register('./service-worker.js', { scope: './' })
-       .then(function (registration) {
-          console.log("Service Worker Registered");
-    })
-      .catch(function (err) {
-        console.log("Service Worker Failed to Register", err);
-     })
-
- }
+ 
  
  var $status = document.getElementById('status');
 
@@ -67,9 +57,11 @@ function persistentNotification() {
   }
 
   try {
-  navigator.serviceWorker.getRegistration()
-      .then((reg) => reg.showNotification("Hi there - persistent!"))
-      .catch((err) => alert('Service Worker registration error: ' + err));
+    
+     navigator.serviceWorker.getRegistration().then(reg => {
+       reg.showNotification("Go go");
+     });
+  
   } catch (err) {
     alert('Notification API error: ' + err);
   }
