--- a/index.html
+++ b/index.html
@@ -57,11 +57,9 @@ function persistentNotification() {
   }
 
   try {
-    
-     navigator.serviceWorker.getRegistration().then(reg => {
-       reg.showNotification("Go go");
-     });
-  
+  navigator.serviceWorker.getRegistration()
+      .then((reg) => console.log(reg))
+      .catch((err) => alert('Service Worker registration error: ' + err));
   } catch (err) {
     alert('Notification API error: ' + err);
   }
